Update ESLint 10 config (#19)
Merge ESLint 10 flat-config migration with Node engine and CI runtime alignment. Local verification: npm test passed without lint warnings; cmd /c build-apk.bat passed with a dev-signed APK.